grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-server-keisuke-one
  labels:
    run: grafana-server-keisuke-one
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      name: http
  selector:
    run: grafana-server-keisuke-one
